Test cleanup after Travis failures

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
-envlist = py27, py34
+envlist = py27
 
 [testenv]
 install_command = pip install {opts} {packages}
 setenv = PYTHONPATH = {toxinidir}:{toxinidir}/postagemq
 commands = py.test {posargs}
-deps = -rrequirements.txt
+deps = pytest
+       -rrequirements.txt
