--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,6 @@ language: python
 
 python:
   - "2.7"
-  - "2.6"
-  - "pypy"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
@@ -13,4 +11,4 @@ install:
 
 # command to run tests, e.g. python setup.py test
 script:
-  - "python setup.py test"
+  - "py.test"
