Refactoring using cookiecutter-pypackage

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,8 @@
 envlist = py27
 
 [testenv]
-install_command = pip install {opts} {packages}
-setenv = PYTHONPATH = {toxinidir}:{toxinidir}/postagemq
+setenv =
+    PYTHONPATH = {toxinidir}:{toxinidir}/postagemq
 commands = py.test {posargs}
-deps = pytest
-       -rrequirements.txt
+
+deps = -rrequirements.txt -rrequirements_test.py
