Requirements file split into different files

--- a/tox.ini
+++ b/tox.ini
@@ -6,4 +6,5 @@ setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/postagemq
 commands = py.test {posargs}
 
-deps = -rrequirements.txt -rrequirements_test.py
+deps = -rrequirements.txt
+	   -rrequirements_test.txt
