--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -7,4 +7,12 @@ coverage==4.0
 Sphinx==1.3.1
 cryptography==1.0.1
 PyYAML==3.11
+pika==0.10.0
 
+# Ansible
+ansible==2.0.0.2
+ecdsa==0.13
+Jinja2==2.8
+MarkupSafe==0.23
+paramiko==1.16.0
+pycrypto==2.6.1
