--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = py27
+envlist = py27, py34, py35
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/postagemq
-commands = py.test {posargs}
+commands = py.test {posargs} tests
 
 deps = -rrequirements.txt
 	   -rrequirements_test.txt
+     setuptools
