--- a/vagrant/ansible/inventory_vagrant.ini
+++ b/vagrant/ansible/inventory_vagrant.ini
@@ -1,6 +1,6 @@
-master ansible_ssh_host=127.0.0.1 ansible_ssh_port=2222 ansible_ssh_user='vagrant' ansible_ssh_private_key_file='/home/leo/devel/postagemq/.vagrant/machines/master/virtualbox/private_key' address=192.168.33.10
-slave1 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2271 ansible_ssh_user='vagrant' ansible_ssh_private_key_file='/home/leo/devel/postagemq/.vagrant/machines/slave/virtualbox/private_key' address=192.168.33.21
-slave2 ansible_ssh_host=127.0.0.1 ansible_ssh_port=2272 ansible_ssh_user='vagrant' ansible_ssh_private_key_file='/home/leo/devel/postagemq/.vagrant/machines/slave/virtualbox/private_key' address=192.168.33.22
+master ansible_ssh_host=127.0.0.1 ansible_ssh_port=4444 ansible_ssh_user='vagrant' ansible_ssh_private_key_file='.vagrant/machines/master/virtualbox/private_key' address=192.168.44.10
+slave1 ansible_ssh_host=127.0.0.1 ansible_ssh_port=4471 ansible_ssh_user='vagrant' ansible_ssh_private_key_file='.vagrant/machines/slave1/virtualbox/private_key' address=192.168.44.21
+slave2 ansible_ssh_host=127.0.0.1 ansible_ssh_port=4472 ansible_ssh_user='vagrant' ansible_ssh_private_key_file='.vagrant/machines/slave2/virtualbox/private_key' address=192.168.44.22
 
 [masters]
 master
@@ -8,7 +8,3 @@ master
 [slaves]
 slave1
 slave2
-
-[all]
-masters
-slaves
