--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,15 @@ language: python
 
 python:
   - "2.7"
+  - "3.4"
+  - "3.5"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
-  - "pip install -r requirements.txt --use-mirrors"
+  - "pip install pip --upgrade"
+  - "pip install -r requirements.txt"
+  - "pip install -r requirements_test.txt"
+  - "pip install ."
 
 # command to run tests, e.g. python setup.py test
 script:
