--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,5 @@ envlist = py27, py34, py35
 [testenv]
 commands = py.test {posargs} tests
 
-deps = -rrequirements.txt
-	   -rrequirements_test.txt
+deps = -rrequirements/test.txt
      setuptools
