--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -27,7 +27,7 @@ Vagrant.configure(2) do |config|
 
   config.vm.provision 'ansible' do |ansible|
     ansible.playbook = 'playbooks/main.yml'
-    ansible.galaxy_role_file = 'playbooks/requirements.yml'
+    # ansible.galaxy_role_file = 'playbooks/requirements.yml'
 	ansible.inventory_path = 'ansible/inventory_vagrant.ini'
   end
 
