--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
   - "pip install pip --upgrade"
-  - "pip install -r requirements.txt"
-  - "pip install -r requirements_test.txt"
+  - "pip install -r requirements/test.txt"
   - "pip install ."
 
 # command to run tests, e.g. python setup.py test
